Fix operator== and hash() for ExtendedColor https://bugs.webkit.org/show_bug.cgi?id=211993

Reviewed by Sam Weinig.

Source/WebCore:

Color::operator== and hash() were wrong for extended color. Fix operator==
to compare extended colors. Extended and non-extended colors have to always
conpare as non-equal to preserve computed style behavior, currently.

Fix hash() to hash the color components and colorspace for ExtendedColor.

Add some API tests for these code paths.

* platform/graphics/Color.cpp:
(WebCore::extendedColorsEqual):
* platform/graphics/Color.h:
(WebCore::operator==):
(WebCore::Color::hash const):
* platform/graphics/ColorUtilities.cpp:
(WebCore::areEssentiallyEqual):
* platform/graphics/ColorUtilities.h:
(WebCore::operator==):
(WebCore::operator!=):
* platform/graphics/ExtendedColor.cpp:
(WebCore::ExtendedColor::hash const):
* platform/graphics/ExtendedColor.h:
(WebCore::operator==):
(WebCore::operator!=):

Tools:

* TestWebKitAPI/Tests/WebCore/ExtendedColorTests.cpp:
(TestWebKitAPI::TEST):

Canonical link: https://commits.webkit.org/224886@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261794 268f45cc-cd09-0410-ab3c-d52691b4dbfc