Source/WebCore/platform/graphics/ExtendedColor.cpp
@@ -26,6 +26,7 @@
 #include "config.h"
 #include "ExtendedColor.h"
 
+#include <wtf/Hasher.h>
 #include <wtf/MathExtras.h>
 #include <wtf/text/StringConcatenateNumbers.h>
 
@@ -34,6 +35,11 @@ namespace WebCore {
 Ref<ExtendedColor> ExtendedColor::create(float c1, float c2, float c3, float alpha, ColorSpace colorSpace)
 {
     return adoptRef(*new ExtendedColor(c1, c2, c3, alpha, colorSpace));
+}
+
+unsigned ExtendedColor::hash() const
+{
+    return computeHash(m_channels.components[0], m_channels.components[1], m_channels.components[2], m_channels.components[3], m_colorSpace);
 }
 
 String ExtendedColor::cssText() const
